syntax = "proto3";

package emergencia;

option go_package = "./proto;emergencia";

message Emergencia {
  string name = 1;
  int32 latitude = 2;
  int32 longitude = 3;
  int32 magnitude = 4;
}

message Emergencias {
  repeated Emergencia lista = 1;
}

message Estado {
  string mensaje = 1;
}

service AsignacionService {
  rpc EnviarEmergencias(Emergencias) returns (Estado);
}
